tests/fixtures/invalid/pow_int_set_int.py
# Cannot call pow() with Int, Set[int], Int
x = pow(1, {1, 2, 3}, 1)
